sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:8: error: '(' expected but identifier found.
  if plusPetit(i,i+1)   {
     ^AlgCocktailSort1:10: error: illegal start of simple expression
  }}
   ^AlgCocktailSort1:16: error: ')' expected but '}' found.
}
^